Potential fix for bottom row being below the fold on mobile

--- a/LotsOfChicken/LotsOfChicken.css
+++ b/LotsOfChicken/LotsOfChicken.css
@@ -991,6 +991,12 @@ footer #pay {
 		display:block;
 	}
 
+	.sidebar {
+		position:fixed;
+	}
+	.sidebar.scroll {
+		position: relative;
+	}
 	#upcoming,
 	.sharing {
 		max-width: initial;
